Add a passage about usage of git

--- a/note/template.html
+++ b/note/template.html
@@ -2,53 +2,47 @@
 <html lang="ja">
 <head>
 <meta charset="utf-8">
-<title>よく使う知識</title>
+<title>ソウのホームぺージ</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="copyright" content="Template Party">
-<meta name="description" content="ソフト、APIの使い方などメモするところ">
-<link rel="stylesheet" href="css/style.css">
+<meta name="description" content="趣味半分で作ったサイトで、普段のノードや日頃のイラストの作品を乗せたい">
+<meta name="keywords" content="キーワード１,キーワード２,キーワード３,キーワード４,キーワード５">
+<link rel="stylesheet" href="..\css/style.css">
 <!--[if lt IE 9]>
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
-<script type="text/javascript" src="js/openclose.js"></script>
+<script type="text/javascript" src="..\js/openclose.js"></script>
 </head>
 
-<body>
+<body id="top">
 
 <header>
 <div id="inner">
 <h1 id="logo"><font color=white size=6>ZENG's homepage</font></h1>
 <address><span class="tel">Tel：090-8529-2503</span>Mail: zeng.xingji.zq8@is.naist.jp</address>
-
 </div>
 </header>
-<!--ここからは正文-->
+<!------------------------------ここからは正文--------------------------------->
 <div id="contents">
-
 <div id="main">
-
 <section>
-<h2>よく使うコマンド</h2>
-<a href="note/git_note_1.html" style="text-decoration: none;"><p>・Git勉強ノート(1)~最初から配置しよう~</p></a>
+<h2>開発したもの</h2>
 </section>
-
-<!--/about-->
 
 </div>
 <!--/main-->
-<!-----------------------ここからは左側-------------------------------------->
-
+<!------------------------ここからは左側------------------------------------>
 <div id="sub">
 
 <nav id="menubar" class="box1">
 <h2>メニュー</h2>
 <ul class="submenu mb10">
-<li><a href="index.html">ホーム</a></li>
-<li><a href="experience.html">経験</a></li>
-<li><a href="development.html">遊び開発</a></li>
-<li><a href="paper.html">面白い論文</a></li>
-<li><a href="illust.html">日頃の落書き</a></li>
-<li><a href="note.html">勉強のノード</a></li>
+<li><a href="..\index.html">ホーム</a></li>
+<li><a href="..\experience.html">経験</a></li>
+<li><a href="..\development.html">遊び開発</a></li>
+<li><a href="..\paper.html">面白い論文</a></li>
+<li><a href="..\ilust.html">日頃の落書き</a></li>
+<li><a href="..\note.html">勉強のノード</a></li>
 </ul>
 </nav>
 
